--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
             <div class="logo">
                 <a href="index.html" style="display: flex; gap: 10px; text-decoration: none; align-items: center;">
                     <img src="Recursos/Logo_Eureka.png" alt="Eureka Logo">
-                    <span class="brand-name">EUREKA</span>
+                    <span class="brand-name">Eureka</span>
                 </a>
                 <button class="mobile-menu-toggle" aria-label="Toggle menu">
                     <span></span>
@@ -278,7 +278,7 @@
 
             <!-- Marca -->
             <div class="footer-brand">
-                <span>EUREKA</span>
+                <span>Eureka</span>
             </div>
 
             <!-- Copyright -->
