--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="logo">
                 <a href="index.html#top" style="display: flex; gap: 10px; text-decoration: none; align-items: center;">
                     <img src="Recursos/Logo_Eureka.png" alt="Eureka Logo">
-                    <span class="brand-name">EUREKA</span>
+                    <span class="brand-name">Eureka</span>
                 </a>
                 <!-- Botón 'Hamburguesa' para menú en móviles -->
                 <button class="mobile-menu-toggle" aria-label="Toggle menu">
@@ -94,13 +94,13 @@
                 <div class="hero-inner">
                     <!-- Texto Principal -->
                     <div class="hero-content">
-                        <p class="hero-subtitle">CON INTELIGENCIA DE DATOS RETAIL</p>
-                        <h1>Menos agotados.<br>Menos pérdidas.<br><span class="hero-highlight">Más control de
-                                ventas.</span></h1>
+                        <p class="hero-subtitle">CON INTELIGENCIA DE DATOS DE RETAIL</p>
+                        <h1>Incrementa tus ventas<br>y manten tus inventarios<br><span
+                                class="hero-highlight">Sanos</span></h1>
                         <p class="hero-description">
-                            Mientras tus datos están dispersos y llegan tarde, las decisiones cuestan margen.<br>
                             Eureka conecta ventas, inventarios y ejecución en tienda para que veas los problemas antes
-                            de que impacten el resultado.
+                            de que impacten el resultado.<br>
+
                         </p>
                         <!-- Botones del Hero -->
                         <div class="hero-buttons">
@@ -130,52 +130,43 @@
                 acción con evidencia.
             </p>
 
-            <div class="accordion-section">
-                <!-- Columna Izquierda: Acordeón -->
-                <div class="accordion-container">
-                    <!-- Ítem 1 -->
-                    <div class="accordion-item">
-                        <button class="accordion-header">
-                            Información confiable, a tiempo
-                            <span class="accordion-icon"></span>
-                        </button>
-                        <div class="accordion-content">
-                            <p>Eureka concentra y actualiza la información de ventas e inventarios de todas las cadenas
-                                comerciales para que tu equipo trabaje siempre con los mismos datos, sin retrasos ni
-                                versiones distintas. Menos tiempo explicando números, más tiempo tomando decisiones.</p>
-                        </div>
+            <div class="steps-grid">
+                <!-- Step 1 -->
+                <div class="step-card">
+                    <div class="step-header">
+                        <h3 class="step-title">Información Confiable, A Tiempo</h3>
                     </div>
-
-                    <!-- Ítem 2 -->
-                    <div class="accordion-item">
-                        <button class="accordion-header">
-                            Indicadores que guían decisiones
-                            <span class="accordion-icon"></span>
-                        </button>
-                        <div class="accordion-content">
-                            <p>La información se transforma en indicadores claros que permiten detectar desviaciones,
-                                priorizar acciones y enfocar al equipo en lo que realmente impacta el resultado. No se
-                                trata de ver más reportes, sino de saber dónde actuar primero.</p>
-                        </div>
-                    </div>
-
-                    <!-- Ítem 3 -->
-                    <div class="accordion-item">
-                        <button class="accordion-header">
-                            Ejecución y validación en tienda
-                            <span class="accordion-icon"></span>
-                        </button>
-                        <div class="accordion-content">
-                            <p>Eureka conecta los indicadores con lo que sucede en tienda, dando visibilidad sobre
-                                inventarios, exhibiciones y promociones para validar que lo planeado sí se ejecute. Así,
-                                las decisiones dejan de basarse en suposiciones y se respaldan con evidencia real.</p>
-                        </div>
+                    <div class="step-body">
+                        <p class="step-desc">Eureka concentra y actualiza la información de ventas e inventarios de
+                            todas las cadenas comerciales para que tu equipo trabaje siempre con los mismos datos, sin
+                            retrasos ni versiones distintas. Menos tiempo explicando números, más tiempo tomando
+                            decisiones.</p>
                     </div>
                 </div>
 
-                <!-- Columna Derecha: Imagen Ilustrativa -->
-                <div class="accordion-image">
-                    <img src="Recursos/Laptop_BI_Mokcup.png" alt="Eureka BI Dashboard">
+                <!-- Step 2 -->
+                <div class="step-card">
+                    <div class="step-header">
+                        <h3 class="step-title">Indicadores Que Guían Decisiones</h3>
+                    </div>
+                    <div class="step-body">
+                        <p class="step-desc">La información se transforma en indicadores claros que permiten detectar
+                            desviaciones, priorizar acciones y enfocar al equipo en lo que realmente impacta el
+                            resultado. No se trata de ver más reportes, sino de saber dónde actuar primero.</p>
+                    </div>
+                </div>
+
+                <!-- Step 3 -->
+                <div class="step-card">
+                    <div class="step-header">
+                        <h3 class="step-title">Ejecución Y Validación En Tienda</h3>
+                    </div>
+                    <div class="step-body">
+                        <p class="step-desc">Eureka conecta los indicadores con lo que sucede en tienda, dando
+                            visibilidad sobre inventarios, exhibiciones y promociones para validar que lo planeado sí se
+                            ejecute. Así, las decisiones dejan de basarse en suposiciones y se respaldan con evidencia
+                            real.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -563,7 +554,7 @@
                 <div class="contact-item">
                     <h3>Teléfono</h3>
                     <div class="copy-wrapper">
-                        <p id="contact-phone">+52 669 9947227</p>
+                        <p id="contact-phone">+52 669 994 7227</p>
                         <button class="copy-btn" data-target="contact-phone" aria-label="Copiar teléfono">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -572,13 +563,13 @@
                                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                             </svg>
                         </button>
-                        <span class="copy-feedback">Copied!</span>
+                        <span class="copy-feedback">Copied</span>
                     </div>
                 </div>
             </div>
             <!-- Botones de Acción (Link a página de contacto, WhatsApp y Llamada) -->
             <div class="contact-actions">
-                <a href="contacto.html" class="action-btn primary" id="contact-email-btn">Solicitar análisis</a>
+                <a href="contacto.html" class="action-btn primary" id="contact-email-btn">Solicitar Prueba</a>
                 <a href="https://wa.me/526699947227" class="action-btn primary custom-outline-btn"
                     target="_blank">WhatsApp</a>
                 <a href="tel:+526699947227" class="action-btn primary custom-outline-btn">Llamar</a>
@@ -622,7 +613,7 @@
 
             <!-- Marca en el Footer -->
             <div class="footer-brand">
-                <span>EUREKA</span>
+                <span>Eureka</span>
             </div>
 
             <!-- Copyright -->
