--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <div class="logo">
                 <a href="index.html" style="display: flex; gap: 10px; text-decoration: none; align-items: center;">
                     <img src="Recursos/Logo_Eureka.png" alt="Eureka Logo">
-                    <span class="brand-name">EUREKA</span>
+                    <span class="brand-name">Eureka</span>
                 </a>
                 <button class="mobile-menu-toggle" aria-label="Toggle menu">
                     <span></span>
@@ -82,7 +82,7 @@
                 <div class="login-logo">
                     <!-- Logotipo -->
                     <img src="Recursos/Logo_Eureka.png" alt="Eureka Logo" class="login-logo-img">
-                    <span class="login-brand-name">EUREKA</span>
+                    <span class="login-brand-name">Eureka</span>
                 </div>
 
                 <h2 class="login-title">Código de Cliente</h2>
@@ -141,7 +141,7 @@
 
             <!-- Marca -->
             <div class="footer-brand">
-                <span>EUREKA</span>
+                <span>Eureka</span>
             </div>
 
             <!-- Copyright -->
