Login, aviso de privacidsad fix

--- a/login.html
+++ b/login.html
@@ -151,6 +151,29 @@
         </div>
     </footer>
 
+    <!-- 
+    --- MODALES Y ELEMENTOS FLOTANTES --- 
+    Ventana de Política de Privacidad y Botón de WhatsApp flotante.
+    -->
+    <div id="privacy-modal" class="modal-overlay hidden">
+        <div class="modal-wrapper">
+            <div class="modal-card">
+                <h2 class="modal-title">Política de privacidad</h2>
+                <p class="modal-text">
+                    "La presente Política de Privacidad establece los términos en que Sistemas Eureka Mx usa y protege
+                    la
+                    información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía
+                    está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos
+                    de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se
+                    emplea de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede
+                    cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar
+                    continuamente esta página para asegurarse que está de acuerdo con dichos cambios."
+                </p>
+            </div>
+            <button id="close-modal-btn" class="modal-close-btn">X</button>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="script.js"></script>
 
