--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                 <div class="hero-inner">
                     <!-- Texto Principal -->
                     <div class="hero-content">
-                        <p class="hero-subtitle">CON INTELIGENCIA DE DATOS DE RETAIL</p>
-                        <h1>Incrementa tus ventas<br>y manten tus inventarios<br><span
-                                class="hero-highlight">Sanos</span></h1>
+                        <p class="hero-subtitle">Eureka Bussines Intelligence</p>
+                        <h1>Toda tu información de ventas e inventarios retail<br> <span class="hero-highlight">en un
+                                solo lugar</span></h1>
                         <p class="hero-description">
                             Eureka conecta ventas, inventarios y ejecución en tienda para que veas los problemas antes
                             de que impacten el resultado.<br>
