--- a/faq.html
+++ b/faq.html
@@ -13,10 +13,7 @@
 </head>
 
 <body>
-    <!-- 
-    --- SECCIÓN DE NAVEGACIÓN (HEADER) --- 
-    Idéntica a la página principal.
-    -->
+    <!-- Header -->
     <header>
         <div class="nav-container">
             <div class="logo">
@@ -70,10 +67,7 @@
         </div>
     </header>
 
-    <!-- 
-    --- CONTENIDO PRINCIPAL: PREGUNTAS FRECUENTES --- 
-    Grid de dos columnas: Izquierda (Preguntas) / Derecha (CTA)
-    -->
+    <!-- FAQ Main Content -->
     <main class="faq-page-main">
         <section class="faq-content-wrapper">
 
@@ -85,7 +79,7 @@
             </div>
 
             <div class="faq-grid">
-                <!-- Columna Izquierda: Lista de Preguntas -->
+                <!-- Left Column: Questions -->
                 <div class="faq-questions-col">
 
                     <!-- Pregunta 1 -->
@@ -222,7 +216,7 @@
 
                 </div>
 
-                <!-- Columna Derecha: CTA (Llamada a la acción) -->
+                <!-- Right Column: CTA -->
                 <div class="faq-cta-col">
                     <div class="faq-cta-card">
                         <div class="faq-cta-icon">
@@ -244,10 +238,7 @@
         </section>
     </main>
 
-    <!-- 
-    --- FOOTER --- 
-    Pie de página estándar.
-    -->
+    <!-- Footer -->
     <footer class="main-footer">
         <div class="footer-container">
             <!-- Sección Superior -->
