--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Título de la página principal -->
+    <!-- Page Title -->
     <title>Eureka | Retail Business Intelligence</title>
     <!-- Icono de la pestaña -->
     <link rel="icon" href="Recursos/Eureka_Logo.svg" type="image/svg+xml">
@@ -13,13 +13,10 @@
 </head>
 
 <body>
-    <!-- 
-    --- SECCIÓN DE NAVEGACIÓN (HEADER) --- 
-    Contiene el logotipo, el menú de navegación principal y los botones de acción rápida.
-    -->
+    <!-- Header -->
     <header>
         <div class="nav-container">
-            <!-- Logotipo y nombre de la marca (Enlace al inicio) -->
+            <!-- Logo -->
             <div class="logo">
                 <a href="index.html#top" style="display: flex; gap: 10px; text-decoration: none; align-items: center;">
                     <img src="Recursos/Logo_Eureka.png" alt="Eureka Logo">
@@ -84,10 +81,7 @@
         </div>
     </header>
 
-    <!-- 
-    --- SECCIÓN HERO (PORTADA) --- 
-    Primera sección que ve el usuario. Mensaje principal y llamada a la acción.
-    -->
+    <!-- Hero Section -->
     <main>
         <section class="hero-container">
             <div class="hero-frame">
@@ -117,10 +111,7 @@
         </section>
     </main>
 
-    <!-- 
-    --- SECCIÓN: CÓMO FUNCIONA --- 
-    Explica los tres pilares de Eureka con acordeón interactivo.
-    -->
+    <!-- How It Works Section -->
     <section id="funcionamiento" class="how-it-works">
         <div class="hiw-container">
             <h2 class="hiw-title">¿Cómo funciona Eureka?</h2>
@@ -172,10 +163,7 @@
         </div>
     </section>
 
-    <!-- 
-    --- SECCIÓN: BENEFICIOS (POR QUÉ EUREKA) --- 
-    Tarjetas numeradas que destacan las ventajas competitivas.
-    -->
+    <!-- Benefits Section -->
     <section id="why-eureka" class="why-eureka">
         <div class="why-container">
             <h2 class="why-title">¿POR QUÉ NECESITAS<br>EUREKA?</h2>
@@ -229,10 +217,7 @@
         </div>
     </section>
 
-    <!-- 
-    --- SECCIÓN: SOFTWARE DE PROMOTORÍA --- 
-    Carrusel interactivo para mostrar funciones de la app móvil.
-    -->
+    <!-- Promo Software Section -->
     <section id="software-promotoria" class="promo-section">
         <div class="promo-container">
             <h2 class="promo-title">Software para Promotoría</h2>
@@ -441,10 +426,7 @@
         </div>
     </section>
 
-    <!-- 
-    --- SECCIÓN: NUESTROS SERVICIOS --- 
-    Detalle de servicios de BI y Promotoría en tarjetas.
-    -->
+    <!-- Services Section -->
     <section id="nuestros-servicios" class="services-section">
         <div class="services-header">
             <h2 class="services-title">NUESTROS SERVICIOS</h2>
@@ -505,10 +487,7 @@
         </div>
     </section>
 
-    <!-- 
-    --- SECCIÓN: SLOGAN Y CTA --- 
-    Llamada final a la acción con imagen de mockup.
-    -->
+    <!-- Slogan & CTA -->
     <section id="slogan-cta" class="slogan-section">
         <div class="slogan-container">
             <h2 class="slogan-title">¿Quieres ver dónde estás perdiendo ventas hoy?</h2>
@@ -524,10 +503,7 @@
         </div>
     </section>
 
-    <!-- 
-    --- SECCIÓN DE CONTACTO --- 
-    Formulario, botones de llamada y WhatsApp.
-    -->
+    <!-- Contact Section -->
     <section id="contact-info" class="contact-section">
         <div class="contact-header">
             <h2 class="contact-title">Háblanos de tu operación comercial</h2>
@@ -577,10 +553,7 @@
         </div>
     </section>
 
-    <!-- 
-    --- SECCIÓN FOOTER (PIE DE PÁGINA) --- 
-    Enlaces legales, contacto rápido y redes sociales.
-    -->
+    <!-- Footer -->
     <footer class="main-footer">
         <div class="footer-container">
             <!-- Sección Superior: Enlaces -->
@@ -623,10 +596,7 @@
         </div>
     </footer>
 
-    <!-- 
-    --- MODALES Y ELEMENTOS FLOTANTES --- 
-    Ventana de Política de Privacidad y Botón de WhatsApp flotante.
-    -->
+    <!-- Modals & Floating Elements -->
     <div id="privacy-modal" class="modal-overlay hidden">
         <div class="modal-wrapper">
             <div class="modal-card">
