--- a/login.html
+++ b/login.html
@@ -13,10 +13,7 @@
 
 <body class="login-page-body">
 
-    <!-- 
-    --- SECCIÓN DE NAVEGACIÓN (HEADER) --- 
-    Idéntica a la página principal.
-    -->
+    <!-- Header -->
     <header>
         <div class="nav-container">
             <div class="logo">
@@ -37,7 +34,7 @@
                     <li><a href="index.html#why-eureka">Beneficios</a></li>
                     <li><a href="index.html#software-promotoria">Promotoría</a></li>
                     <li><a href="index.html#nuestros-servicios">Servicios</a></li>
-                    <!-- Dropdown 'Contactos' Desktop -->
+                    <!-- Desktop Contact Dropdown -->
                     <li class="nav-item-dropdown desktop-only">
                         <button class="nav-dropdown-toggle">
                             Contactos
@@ -48,7 +45,7 @@
                             <a href="contacto.html" class="dropdown-item">Mandar correo</a>
                         </div>
                     </li>
-                    <!-- Opciones Móviles -->
+                    <!-- Mobile Options -->
                     <li class="mobile-nav-item"><a href="index.html#contact-info">Nuestros datos</a></li>
                     <li class="mobile-nav-item"><a href="contacto.html">Mandar correo</a></li>
                     <li class="mobile-nav-buttons">
@@ -66,18 +63,15 @@
         </div>
     </header>
 
-    <!-- 
-    --- CONTENIDO PRINCIPAL: LOGIN --- 
-    Tarjeta de inicio de sesión dividida (Imagen Izquierda / Formulario Derecha).
-    -->
+    <!-- Login Section -->
     <main class="login-main-section">
         <div class="login-card">
-            <!-- Columna Izquierda: Imagen decorativa -->
+            <!-- Image Column -->
             <div class="login-image-col">
                 <img src="Recursos/Login_Mockup.jpg" alt="User working on Laptop">
             </div>
 
-            <!-- Columna Derecha: Formulario -->
+            <!-- Form Column -->
             <div class="login-form-col">
                 <div class="login-logo">
                     <!-- Logotipo -->
@@ -107,10 +101,7 @@
         </div>
     </main>
 
-    <!-- 
-    --- FOOTER --- 
-    Pie de página estándar.
-    -->
+    <!-- Footer -->
     <footer class="main-footer">
         <div class="footer-container">
             <!-- Sección Superior -->
@@ -151,10 +142,7 @@
         </div>
     </footer>
 
-    <!-- 
-    --- MODALES Y ELEMENTOS FLOTANTES --- 
-    Ventana de Política de Privacidad y Botón de WhatsApp flotante.
-    -->
+    <!-- Modals -->
     <div id="privacy-modal" class="modal-overlay hidden">
         <div class="modal-wrapper">
             <div class="modal-card">
