--- a/contacto.html
+++ b/contacto.html
@@ -12,23 +12,10 @@
 </head>
 
 <body>
-    <!-- 
-    --- SECCIÓN DE NAVEGACIÓN (HEADER) --- 
-    Idéntica a la página principal.
-    -->
+    <!-- Header -->
     <header>
         <div class="nav-container">
-            <div class="logo">
-                <a href="index.html#top" style="display: flex; gap: 10px; text-decoration: none; align-items: center;">
-                    <img src="Recursos/Logo_Eureka.png" alt="Eureka Logo">
-                    <span class="brand-name">Eureka</span>
-                </a>
-                <button class="mobile-menu-toggle" aria-label="Toggle menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
-            </div>
+            <!-- Logo -->
             <div class="mobile-overlay"></div>
             <nav>
                 <button class="mobile-menu-back" aria-label="Cerrar menú">
@@ -42,7 +29,7 @@
                     <li><a href="index.html#why-eureka">Beneficios</a></li>
                     <li><a href="index.html#software-promotoria">Promotoría</a></li>
                     <li><a href="index.html#nuestros-servicios">Servicios</a></li>
-                    <!-- Dropdown 'Contactos' para Desktop -->
+                    <!-- Desktop Contact Dropdown -->
                     <li class="nav-item-dropdown desktop-only">
                         <button class="nav-dropdown-toggle">
                             Contactos
@@ -53,7 +40,7 @@
                             <a href="contacto.html" class="dropdown-item">Mandar correo</a>
                         </div>
                     </li>
-                    <!-- Opciones 'Contactos' para Móvil -->
+                    <!-- Mobile Contact Options -->
                     <li class="mobile-nav-item"><a href="index.html#contact-info">Nuestros datos</a></li>
                     <li class="mobile-nav-item"><a href="contacto.html">Mandar correo</a></li>
                     <li class="mobile-nav-buttons">
@@ -69,24 +56,21 @@
         </div>
     </header>
 
-    <!-- 
-    --- CONTENIDO PRINCIPAL: CONTACTO --- 
-    Formulario para envío directo de correos.
-    -->
+    <!-- Contact Content -->
     <main class="contact-page-main">
         <div class="contact-page-container">
-            <!-- Columna Izquierda: Imagen decorativa -->
+            <!-- Decorative Image -->
             <div class="contact-page-graphic">
                 <img src="Recursos/Email_deco.jpg" alt="Eureka Contact" class="contact-logo-img">
             </div>
 
-            <!-- Columna Derecha: Formulario -->
+            <!-- Contact Form -->
             <div class="contact-page-form-wrapper">
                 <h1 class="contact-page-title">Contactanos mediante E-Mail</h1>
                 <p class="contact-page-subtitle">Solicita nuestros servicios, y hablemos sobre como implementar Eureka
                     para tu negocio</p>
 
-                <!-- El formulario usa Formspree para procesar el envío -->
+                <!-- Formspree Integration -->
                 <form id="contact-form" class="contact-page-form" action="https://formspree.io/f/xqeedgzo"
                     method="POST">
                     <!-- Campo oculto para definir el destinatario real en la config de Formspree -->
@@ -107,7 +91,7 @@
                     <button type="submit" class="contact-submit-btn">Enviar Mensaje</button>
                 </form>
 
-                <!-- Mensaje de éxito (Oculto por defecto) -->
+                <!-- Success Message -->
                 <div id="form-success" class="form-success-message" style="display: none;">
                     <p>¡Mensaje enviado con éxito! Nos pondremos en contacto contigo pronto.</p>
                     <a href="index.html" class="btn-home">Volver a inicio</a>
@@ -116,10 +100,7 @@
         </div>
     </main>
 
-    <!-- 
-    --- FOOTER --- 
-    Pie de página estándar.
-    -->
+    <!-- Footer -->
     <footer class="main-footer">
         <div class="footer-container">
             <!-- Sección Superior -->
@@ -189,10 +170,7 @@
         <img src="Recursos/Contact_whatsapp logopng.png" alt="WhatsApp">
     </a>
 
-    <!-- 
-    --- SCRIPT ESPECÍFICO DEL FORMULARIO --- 
-    Maneja el envío asíncrono a Formspree y muestra mensajes de éxito/error.
-    -->
+    <!-- Form Handling Script -->
     <script>
         // Referencias al DOM
         const form = document.getElementById('contact-form');
