--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,17 @@
     <header>
         <div class="nav-container">
             <!-- Logo -->
+            <div class="logo">
+                <a href="index.html#top" style="display: flex; gap: 10px; text-decoration: none; align-items: center;">
+                    <img src="Recursos/Logo_Eureka.png" alt="Eureka Logo">
+                    <span class="brand-name">Eureka</span>
+                </a>
+                <button class="mobile-menu-toggle" aria-label="Toggle menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
             <div class="mobile-overlay"></div>
             <nav>
                 <button class="mobile-menu-back" aria-label="Cerrar menú">
